my final changes

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
 
             <img src="https://cdn.pixabay.com/photo/2015/03/26/09/54/pug-690566_960_720.jpg" class="auth-image" alt="Shakur Miro">
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra.
-                Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
-            nascetur ridiculus mus.</p>
+            <p> My name is Shakur, currently pursuing a change in career from healthcare to software. To say the learning process has been a mountain so far is an understatement.</p>
 
         </section>
 
