--- a/portfolio.html
+++ b/portfolio.html
@@ -24,30 +24,35 @@
         <section class="my-things">
             <h1>Portfolio</h1>
 
-            <div class="guess">
-                <img src="https://assetstorev1-prd-cdn.unity3d.com/key-image/8fb98eec-43ce-4024-ba26-918d4b24b779.jpg" alt="Word Guess">
+            <div id="pics">
 
-                <h3>Word Guess</h3>
-            </div>
-            <div class="rpg">
-                <img src="https://i-cdn.phonearena.com/images/article/101952-two_lead/Best-RPG-games-for-iOS-and-Android-to-play-in-2018.jpg" alt="RPG Game">
 
-                <h3>RPG Game</h3>
-            </div>
-            <div class="trivia">
-                <img src="https://i.ytimg.com/vi/STKppKQGHNE/maxresdefault.jpg" alt="Trivia Game">
+                <div class="guess">
+                    <img src="https://assetstorev1-prd-cdn.unity3d.com/key-image/8fb98eec-43ce-4024-ba26-918d4b24b779.jpg" alt="Word Guess">
 
-                <h3>Trivia Game</h3>
-            </div>
-            <div class="rutgers">
-                <img src="https://s3-us-west-2.amazonaws.com/scorestream-team-profile-pictures/274813/20190807083515_120_mascotOrig.png" alt="Rutgers Info Widget">
+                    <h3>Word Guess</h3>
+                </div>
+                <div class="rpg">
+                    <img src="https://i-cdn.phonearena.com/images/article/101952-two_lead/Best-RPG-games-for-iOS-and-Android-to-play-in-2018.jpg" alt="RPG Game">
 
-                <h3>Rutgers Info Widget</h3>
-            </div>
-            <div class="RPS">
-                <img src="https://hackernoon.com/hn-images/1*uLNNCt_KdLmx5QT-qo5bFw.jpeg" alt="Rock Paper Scissors">
+                    <h3>RPG Game</h3>
+                </div>
+                <div class="trivia">
+                    <img src="https://i.ytimg.com/vi/STKppKQGHNE/maxresdefault.jpg" alt="Trivia Game">
 
-                <h3>Rock Paper Scissors</h3>
+                    <h3>Trivia Game</h3>
+                </div>
+                <div class="rutgers">
+                    <img src="https://s3-us-west-2.amazonaws.com/scorestream-team-profile-pictures/274813/20190807083515_120_mascotOrig.png" alt="Rutgers Info Widget">
+
+                    <h3>Rutgers Info Widget</h3>
+                </div>
+                <div class="RPS">
+                    <img src="https://hackernoon.com/hn-images/1*uLNNCt_KdLmx5QT-qo5bFw.jpeg" alt="Rock Paper Scissors">
+
+                    <h3>Rock Paper Scissors</h3>
+                </div>
+
             </div>
 
         </section>
